# service

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  credentials.json  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  server-deploy.yml
.github/workflows/: linter.yml  main.yml  test.yml
Backend/: forms.py  urls.py  views.py
Backend/migrations/: 0001_initial.py  0004_plant_growthrate.py  0005_plant_image.py  0006_tool_image.py  0007_auto_20211023_2143.py  0011_auto_20211026_1209.py  0012_remove_image_default.py  0013_image_name.py  0015_alter_tool_album.py  0016_alter_image_name.py  0017_plant_kind.py  0018_alter_plant_kind.py  0019_tool_kind.py
Backend_API/: SFSP_views.py  serializers.py  urls.py  views.py
Cart/: models.py  serializers.py  urls.py  views.py
Cart/migrations/: 0002_auto_20211024_1512.py  (+1 more)
Coin/: models.py  serializers.py  urls.py  views.py
Green_House/: models.py  views.py
Kadoo/: asgi.py  db.sqlite3  manage.py  requirements.txt  settings.py  urls.py
Specialist/: admin.py  models.py  serializers.py  urls.py  views.py
Ticket/: models.py  serializers.py  urls.py  views.py
Users/: admin.py  serializers.py  urls.py  views.py
cart/: Done.txt  admin.py  models.py  tests.py  urls.py  views.py
coin/: models.py  views.py
common/: admin.py  models.py  swagger.py  tests.py  urls.py
core/: SFSP_views.py  admin.py  serializers.py  views.py
green_house/: admin.py  apis.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
order/: admin.py  apis.py  models.py  tests.py  urls.py
reminder/: serializer.py  urls.py  views.py
store/: admin.py  models.py  serializers.py  sfsp_views.py  tests.py  urls.py  views.py
support/: admin.py  apps.py  consumers.py  middleware.py  models.py  serializers.py  signals.py  views.py
talebi/: asgi.py  settings.py  urls.py  wsgi.py
templates/: main.html  nav.html
ticket/: admin.py  models.py  views.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+190 files in other folders)
